--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -8,10 +8,10 @@
 		
 		url($header-image);
 
-	background-repeat: no-repeat;
-	background-size: cover;
+	background-repeat: repeat;
+	background-size: auto;
 	background-position: top;
-	border-radius: 0px 0px 40px 40px;
+	border-radius: 0px 0px 0px 0px;
 
 }
 
@@ -212,7 +212,7 @@ nav > ul li:last-child {
 nav > ul li a:link,
 nav > ul li a:visited {
 	text-decoration: none;
-	color: rgba($header-title-color, 0.6);
+	color: rgba($header-title-color, 1);
 }
 
 nav > ul li a:hover,
